--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script language="javascript" type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
+		src="https://cdnjs.loli.net/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
 	<script language="javascript" type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+		src="https://cdnjs.loli.net/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
+	<script src="https://cdn.loli.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
 	<script language="javascript" type="text/javascript" src="geneticAlgorithm.js"></script>
 	<script language="javascript" type="text/javascript" src="neuralNetwork.js"></script>
 	<script language="javascript" type="text/javascript" src="bird.js"></script>
 	<script language="javascript" type="text/javascript" src="pipe.js"></script>
 	<script language="javascript" type="text/javascript" src="sketch.js"></script>
-	<title>Flappy Bird Genetic Algorithm</title>
+	<title>Flappy Bird AI版本</title>
 </head>
 <body>
+	<p> Flappy Bird AI版本 </p>
 	<div id="sketch"></div>
-	<p>Generation: <span id="generation"></span></p>
+	<p>后代数: <span id="generation"></span></p>
 </body>
 </html>
