--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 		src="https://cdnjs.loli.net/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
 	<script language="javascript" type="text/javascript"
 		src="https://cdnjs.loli.net/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
-	<script src="https://cdn.loli.net/npm/@tensorflow/tfjs@1.0.0/dist/tf.min.js"></script>
+	<script src="https://cdnjs.loli.net/ajax/libs/tensorflow/2.0.1/tf.min.js"></script>
 	<script language="javascript" type="text/javascript" src="geneticAlgorithm.js"></script>
 	<script language="javascript" type="text/javascript" src="neuralNetwork.js"></script>
 	<script language="javascript" type="text/javascript" src="bird.js"></script>
